Add a publish script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build:css": "tailwindcss -i ./src/styles/styles.css -o ./src/assets/styles.css --minify",
     "build": "npm run build:css && eleventy",
-    "dev": "npm run build:css && eleventy --serve --watch"
+    "dev": "npm run build:css && eleventy --serve --watch",
+    "publish:site": "npm run build && scripts/publish-site.sh"
   },
   "keywords": [],
   "author": "",
